--- a/README
+++ b/README
@@ -9,13 +9,15 @@ npm will auto install dependencies.
 
 [Running] : 
 
-npm server.js
-
+npm start
 
 [options]
-
--m , --media : The media folder ( folder where media will be stored ) 
 -p , --port : The port server will listen on
--a , --adminips : Admin Ips , seperated by , eg : -a "127.0.0.1,192.168.1.1"
+-a , --adminlist : Admin Ips , seperated by , eg : -a 127.0.0.1,192.168.1.1 or --adminlist 127.0.0.1 192.168.1.1
 
-defaults : port 8085 , media folder : media
+
+[config]
+
+check config.json for default configuration
+
+defaults : port 8086 , media folder : media
